add a button to refresh progress

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 <body>
     <div class="container">
+        <div class="refresh">刷新一下</div>
         <div class="wraper">
             <div class="title">Your <span class="year">2099</span> Progress</div>
             <div  class="message">
                 <span class="year">2099</span>已经溜走<span class="days-has-past">1</span>天了, 过了
                 <span class="percent"></span>%
             </div>
-            <div class="progress-container">
-                <div class="finish"></div>
-            </div>
+            <div class="progress-container"></div>
         </div>
     </div>
     <script src="index.js"></script>
