--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <div class="progress-container"></div>
         </div>
     </div>
+    <footer>
+        <a href="http://www.beian.miit.gov.cn/" target="_blank">粤ICP备20053047号-1</a>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
